fixed project description spacing for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2338,11 +2338,6 @@ h4
 
 }
 
-.proj_desc
-{
-	padding-right: 5%;
-	padding-left: 5%;
-}
 
 .wrapper-1
 {
